--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ div.navlink {
 /* Home - Pokemoncard styling */
 .pokemoncard {
     width: 250px;
-    height: 300px;
+    height: 320px;
     border: 2px solid black;
     display:flex;
     flex-wrap: wrap;
@@ -67,7 +67,7 @@ div.navlink {
 .pokemoncard > h1 {
     text-transform: capitalize;
     font-size: 2em;
-    margin: 10px auto 10px;
+    margin: 0 auto 10px;
 }
 
 .types {
@@ -77,10 +77,68 @@ div.navlink {
     text-transform: capitalize;
 }
 
+.types > h2 {
+    padding: 5px;
+    border-radius: 0.25em;
+}
+
 .pokemonID > span {
-    /* display: flex; */
     justify-content: flex-end;
     font-size: 2em;
     color: whitesmoke;
     margin-left: 10px;
+}
+
+.add-button {
+    margin: 10px auto;
+    background-color: red;
+    width: 100px;
+    padding: 5px;
+    text-align: center;
+    border-radius: 0.25em;
+    color: white;
+}
+
+/* Individual Pokemon */
+
+.details {
+    border: 3px solid black;
+    border-radius: 0.25em;
+    width: 400px;
+    margin: 10px auto 0;
+}
+
+.name-and-imgs {
+    margin: 15px auto;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 0.25em;
+}
+
+.imgs {
+    display: flex;
+    justify-content: space-around;
+}
+
+.imgs > img {
+    width: 150px;
+    height: 150px;
+}
+
+.main-stats {
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+
+}
+
+
+.name-and-imgs > h1 {
+    font-size: 2em;
+    text-transform: capitalize;
+    display: flex;
+    justify-content: center;
 }
