--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ div.navlink {
 /* Home - Pokemoncard styling */
 .pokemoncard {
     width: 250px;
-    height: 320px;
+    height: 340px;
     border: 2px solid black;
     display:flex;
     flex-wrap: wrap;
@@ -89,7 +89,29 @@ div.navlink {
     margin-left: 10px;
 }
 
-.add-button {
+.buttons {
+    display: flex;
+    margin-top: 10px;
+}
+
+.info-button {
+    margin: 10px auto;
+    background-color: #111111;
+    width: 100px;
+    padding: 5px;
+    text-align: center;
+    border-radius: 0.25em;
+    color: white;
+    border: 2px solid white;
+}
+
+.info-button:hover{
+    background-color: white;
+    color: #111111;
+    font-weight: bold;
+}
+
+.add-remove-button {
     margin: 10px auto;
     background-color: red;
     width: 100px;
@@ -97,6 +119,13 @@ div.navlink {
     text-align: center;
     border-radius: 0.25em;
     color: white;
+    border: 2px solid white;
+}
+
+.add-remove-button:hover{
+    background-color: white;
+    color: red;
+    font-weight: bold;
 }
 
 /* Individual Pokemon */
